--- a/maquettes/scss/partials/_var.scss
+++ b/maquettes/scss/partials/_var.scss
@@ -10,4 +10,5 @@ $mutedGrey: #E0E0E0;
 $black: #232323;
 /** shadow **/
 $shadow: 1px 1px 5px $black; // shadow right bas estompe color
+$text-shadow:1px 1px 2px $black;
 $card-radius: 0.3rem
