--- a/maquettes/scss/style.scss
+++ b/maquettes/scss/style.scss
@@ -1,6 +1,8 @@
 @import "./partials/_var";
 @import "./partials/_fonts";
 @import "./partials/_form";
+@import "./partials/_maps-news";
+@import "./partials/_footer";
 /** 
 Reset des styles par défaut suffira pour la maquette
 */
@@ -34,6 +36,43 @@ hr {
     border-bottom: 1px solid $jaune;
     box-shadow: $shadow;
 }
+.btn-rapid-form{
+    display: block;
+    margin: 1rem auto;
+    padding: .5rem;
+    border-radius: .2rem ;
+    background-color: $jaune-opacifie;
+    color: $black;
+    box-shadow: 2px 1px 3px $grey;
+    &:hover{
+        box-shadow: none;
+    }
+}
+.card{
+    margin: 0.5rem;
+    box-shadow: $shadow;
+    border-radius: $card-radius;
+    max-width: 30rem;
+    .card-img{
+        img{
+            border-top-left-radius: calc(0.3rem - 1px);
+            border-top-right-radius: calc(0.3rem - 1px);
+            width: 100%;
+            height: 20rem;
+        }
+    }
+    .card-text{
+        flex: 1 1 auto;
+        padding: 1.5rem;
+        .text{
+            font-size: 1.25rem;
+            text-align: justify;
+        }
+    }
+}
+/**
+ fin classes générales
+*/
 header {
     nav {
         background-color: $jaune;
@@ -101,7 +140,7 @@ header {
             .h1{
                 border-bottom: 1px solid $jaune;
                 /* offset-x | offset-y | blur-radius | color */
-                text-shadow: 1px 1px 2px $black;
+                text-shadow: $text-shadow;
             }
             p{
                 justify-content: center;
@@ -118,7 +157,7 @@ section {
     display: flex;
     flex-direction: column;
     h2, .discover{
-        text-shadow: 1px 1px 2px $black;
+        text-shadow: $text-shadow;
         font-family: 'Luxi-italic','Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
         margin:2rem 0;
         font-size: 2rem;
@@ -173,28 +212,7 @@ section {
             column-gap: 1em;
             align-items: center;
             justify-items: center;
-            .card{
-                margin: 0.5rem;
-                box-shadow: $shadow;
-                border-radius: $card-radius;
-                max-width: 30rem;
-                .card-img{
-                    img{
-                        border-top-left-radius: calc(0.3rem - 1px);
-                        border-top-right-radius: calc(0.3rem - 1px);
-                        width: 100%;
-                        height: 20rem;
-                    }
-                }
-                .card-text{
-                    flex: 1 1 auto;
-                    padding: 1.5rem;
-                    .text{
-                        font-size: 1.25rem;
-                        text-align: justify;
-                    }
-                }
-            }
+            
         }
 
     }
