feat: mobile menu

--- a/maquettes/scss/partials/_form.scss
+++ b/maquettes/scss/partials/_form.scss
@@ -30,11 +30,8 @@
             position: absolute;
             width: 100%;
         }
-        .select-field{
+        .datefield{
             bottom: 0;
-            .field{
-                margin-top: rem;
-            }
         }
         .checkbox-field{
             height: 100%;
