--- a/maquettes/scss/partials/_maps-news.scss
+++ b/maquettes/scss/partials/_maps-news.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     .maps-container{
+        min-width: 20rem;
         iframe{
             width:100%;
             height: 323px;
@@ -13,6 +14,12 @@
         }
     }
     .newsletter-container {
-        
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        margin-bottom: 4rem;
+        .card{
+            min-width: 20rem;
+        }
     }
 }
