--- a/maquettes/scss/partials/_form.scss
+++ b/maquettes/scss/partials/_form.scss
@@ -1,6 +1,4 @@
-/**
- design du formulaire
-*/
+
 .form-container{
     form {
         display: grid;
@@ -62,6 +60,18 @@
         }
         &:last-child{ // bidouille pour le centrage vertical
             display: table;
+        }
+    }
+    .btn-rapid-form{
+        display: block;
+        margin: 1rem auto;
+        padding: .5rem;
+        border-radius: .2rem ;
+        background-color: $jaune-opacifie;
+        color: $black;
+        box-shadow: 2px 1px 3px $grey;
+        &:hover{
+            box-shadow: none;
         }
     }
 
