--- a/maquettes/scss/partials/_program.scss
+++ b/maquettes/scss/partials/_program.scss
@@ -47,12 +47,18 @@
         justify-content: center;
         text-align: center;
         width: 100%;
+        margin-top: 10rem;
         position: static!important;
     }
     
 }
 @media (max-width : 1200px) {
     .film {
+        .detail{
+            .center{
+                position: static!important;
+            }
+        }
         grid-template-areas: 
         " cover cover cover cover cover cover   .   text  text text text ."
         " cover cover cover cover cover cover   .   text  text text text .";
@@ -62,11 +68,12 @@
         }
     }
     button.read{
+        bottom: 100px;
+        right:0; 
         grid-area: btn;
         justify-content: center;
         text-align: center;
         width: 100%;
-        position: static!important;
     }
     
 }
