--- a/maquettes/scss/partials/_program.scss
+++ b/maquettes/scss/partials/_program.scss
@@ -17,9 +17,12 @@
         position:relative;
         grid-area: text; // place prise
         align-items: center;
+        span {
+            // margin-bottom: 1rem;
+        }
         .text{
             text-align: justify;
-            margin-top: 1rem;
+            margin-top: 3rem;
             margin-bottom: 1rem;
         }
         .center {
@@ -47,7 +50,7 @@
         justify-content: center;
         text-align: center;
         width: 100%;
-        margin-top: 10rem;
+        margin-top: 20rem;
         position: static!important;
     }
     
