--- a/maquettes/scss/style.scss
+++ b/maquettes/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./partials/_carousel";
 @import "./partials/_card";
 @import "./partials/_form";
+@import "./partials/_purpose";
 @import "./partials/_maps-news";
 @import "./partials/_policy";
 @import "./partials/_masonry.scss";
@@ -46,7 +47,7 @@ body {
             color: $visited;
         }
     }
-    .h1{
+    .h1, h3{
         font-family: "Tabac";
         font-size: 3rem;
         text-transform: uppercase;
