--- a/maquettes/scss/partials/_hero-wrapper.scss
+++ b/maquettes/scss/partials/_hero-wrapper.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     border: 1px solid #a7a7a7;
     width: calc(70% - 2rem);
+    height: 15rem;
     background: url('./img/monceau.jpg');
     opacity: .65;
     background-size: cover;
