--- a/maquettes/scss/partials/_maps-news.scss
+++ b/maquettes/scss/partials/_maps-news.scss
@@ -1,4 +1,7 @@
 .container-maps-news{
+    .maps-container, .newsletter-container{
+        max-height: 40rem; // fix newsletter-container height
+    }
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     .maps-container{
@@ -14,12 +17,19 @@
         }
     }
     .newsletter-container {
-        display: flex;
-        align-content: center;
-        justify-content: center;
-        margin-bottom: 4rem;
-        .card{
-            min-width: 20rem;
+        .card-text{
+            padding: .5rem;
+        }
+        .newsletter-form{
+            display: flex;
+            label{
+                margin-top: 1rem;
+            }
+            input{
+                margin-top: .5rem;
+                margin-left: .5rem;
+                height: 2rem;
+            }
         }
     }
 }
