--- a/maquettes/scss/partials/_var.scss
+++ b/maquettes/scss/partials/_var.scss
@@ -10,6 +10,6 @@ $grey: #a7a7a7;
 $mutedGrey: #E0E0E0;
 $black: #232323;
 /** shadow **/
-$shadow: 1px 1px 5px $black; // shadow right bas estompe color
+$shadow: 1px 1px 5px $black; // shadow-construction right bas estompe color
 $text-shadow:1px 1px 2px $black;
 $card-radius: 0.3rem
