--- a/PFILM_02_codesource/scss/partials/_fonts.scss
+++ b/PFILM_02_codesource/scss/partials/_fonts.scss
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "Nickelodeon";
-    src: url("../polices/nickelodeon/Nickelodeon.ttf") format("ttf");
+    src: url("../../polices/nickelodeon/NickelodeonNF.ttf") format("ttf");
 }
 @font-face {
     font-family: "Tabac";
-    src: url("../polices/tabac-big-sans-light-maisfonres.3e70/tabac-big-sans-lightmaisfontes.3e70") format("otf");
+    src: url("../../polices/tabac-big-sans-light-maisfontes.3e70/tabac-big-sans-light.otf") format("otf");
 }
 @font-face {
     font-family: "Luxi-italic";
-    src: url("../polices/Luxi-Sans/luxisri.ttf") format("ttf");
+    src: url("../../polices/Luxi-Sans/luxisri.ttf") format("ttf");
 }
