--- a/PFILM_02_codesource/style.css
+++ b/PFILM_02_codesource/style.css
@@ -3,15 +3,15 @@
 /** shadow **/
 @font-face {
   font-family: "Nickelodeon";
-  src: url("../polices/nickelodeon/Nickelodeon.ttf") format("ttf"); }
+  src: url("../../polices/nickelodeon/NickelodeonNF.ttf") format("ttf"); }
 
 @font-face {
   font-family: "Tabac";
-  src: url("../polices/tabac-big-sans-light-maisfonres.3e70/tabac-big-sans-lightmaisfontes.3e70") format("otf"); }
+  src: url("../../polices/tabac-big-sans-light-maisfontes.3e70/tabac-big-sans-light.otf") format("otf"); }
 
 @font-face {
   font-family: "Luxi-italic";
-  src: url("../polices/Luxi-Sans/luxisri.ttf") format("ttf"); }
+  src: url("../../polices/Luxi-Sans/luxisri.ttf") format("ttf"); }
 
 button.read {
   position: absolute;
@@ -100,14 +100,6 @@ section {
   display: flex;
   flex-direction: column;
   min-height: 70vh; }
-  section h2, section .discover {
-    text-shadow: 1px 1px 2px #232323;
-    font-family: 'Luxi-italic','Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
-    margin: 2rem 0;
-    font-size: 2rem;
-    color: #E0E0E0;
-    border-bottom: 1px solid #ffd500;
-    text-align: center; }
   section .featured {
     font-family: "Nickelodeon";
     font-size: 5rem;
@@ -721,6 +713,15 @@ body .h1, body h3 {
   font-family: "Tabac";
   font-size: 3rem;
   text-transform: uppercase; }
+
+body .h2, body h2.h2, body .discover {
+  text-shadow: 1px 1px 2px #232323;
+  font-family: 'Luxi-italic','Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+  margin: 2rem 0;
+  font-size: 2rem;
+  color: #E0E0E0;
+  border-bottom: 1px solid #ffd500;
+  text-align: center; }
 
 body p {
   font-family: "Nickelodeon"; }
